--- a/packages/amplication-client/src/Resource/ResourceNameField.scss
+++ b/packages/amplication-client/src/Resource/ResourceNameField.scss
@@ -4,7 +4,6 @@
     flex-direction: column;
     align-items: flex-end;
   }
-
   &__input {
     text-align: center;
     outline: none;
@@ -17,10 +16,16 @@
     cursor: pointer;
   }
   &__saved {
-    color: #31c587;
+    color: var(--positive-default);
   }
   &__invalid {
-    color: #f85b6e;
+    color: var(--negative-light);
+    cursor: pointer;
+  }
+  &__tooltip_invalid::after {
+    border: 1px solid var(--negative);
+    background-color: var(--white);
+    color: var(--black100);
   }
 }
 
